--- a/CensusRecordAnalysis2/nbproject/project.properties
+++ b/CensusRecordAnalysis2/nbproject/project.properties
@@ -28,13 +28,15 @@ dist.jar=${dist.dir}/CensusRecordAnalysis2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.38-bin.jar=../../../Downloads/Compressed/mysql-connector-java-5.1.38/mysql-connector-java-5.1.38-bin.jar
+file.reference.mysql-connector-java-5.1.38-bin.jar-1=..\\..\\..\\..\\Downloads\\Compressed\\mysql-connector-java-5.1.38\\mysql-connector-java-5.1.38-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.mysql-connector-java-5.1.38-bin.jar}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.38-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
